--- a/backend/TicketApi/TicketManagement.Infrastructure/TicketManagement.Infrastructure.csproj
+++ b/backend/TicketApi/TicketManagement.Infrastructure/TicketManagement.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.22" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TicketManagement.Application\TicketManagement.Application.csproj" />
     <ProjectReference Include="..\TicketManagement.Domain\TicketManagement.Domain.csproj" />
   </ItemGroup>
