implement get all tickets flow

--- a/backend/TicketApi/TicketManagement.Infrastructure/TicketManagement.Infrastructure.csproj
+++ b/backend/TicketApi/TicketManagement.Infrastructure/TicketManagement.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\TicketManagement.Domain\TicketManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Ticket\Command\" />
+  </ItemGroup>
+
 </Project>
