--- a/backend/TicketApi/TicketManagement.Application/TicketManagement.Application.csproj
+++ b/backend/TicketApi/TicketManagement.Application/TicketManagement.Application.csproj
@@ -10,4 +10,15 @@
     <ProjectReference Include="..\TicketManagement.Domain\TicketManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Ticket\Command\" />
+  </ItemGroup>
+
+  <ItemGroup>
+	  
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+	  
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
+  </ItemGroup>
+
 </Project>
