--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ obj/
 .vs/
 *.user
 *.suo
+*.slnx
+*.userosscache
+*.sln.docstates
 
 # Node / Angular
 node_modules/
@@ -13,6 +16,14 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
 
 # OS
 .DS_Store
