--- a/backend/TicketApi/TicketApi/Properties/launchSettings.json
+++ b/backend/TicketApi/TicketApi/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7203;http://localhost:5163",
+      "applicationUrl": "http://localhost:7203",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
